--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,13 +5,17 @@
 body {
     display: flex;
     flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
     font-family: sans-serif;
 }
 
 header {
     display: flex;
     align-items: center;
-
+    padding: 1rem;
 }
 
 button {
@@ -23,4 +27,21 @@ button {
     flex: 1;
     padding: 0 1rem;
     text-align: center;
+}
+
+.board {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.row {
+    flex-grow: 1;
+    display: flex;
+}
+
+.field {
+    flex-grow: 1;
+    border: 1px solid black;
+    cursor: pointer;
 }
